<resources>
    <string name="app_name">Place Reminder</string>
    <string name="title_activity_search_place">Map</string>
    <string name="title_activity_set_reminder">SetReminderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="str_or">OR</string>
    <string name="str_mobile_no">Mobile No</string>
    <string name="str_already_registered_login_here">Already Registered? Login Here</string>
    <string name="email">Email-Id</string>
    <string name="str_password">Password</string>
    <string name="str_register">Register</string>
    <string name="str_full_name">Full Name</string>
    <string name="msg_enter_full_name">Enter full name</string>
    <string name="msg_enter_contact_number">Enter a Contact Number</string>
    <string name="msg_enter_at_least_8_char">Enter password at least 8 char</string>
    <string name="str_login">Login</string>
    <string name="str_create_new_user">Create New User</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="lbl_set_reminder">Set a reminder</string>
    <string name="lbl_find_a_place">Find a place</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="msg_enter_email_id">Enter a email-id</string>
    <string name="str_registration_successfully">Registration successfully</string>
    <string name="string_email_id_is_already_register">Email id is already register</string>
    <string name="string_check_internet_conn_msg">Internet Connection Required, Please Turn On Internet.</string>
    <string name="str_remaining_time">Set Reminder</string>
    <string name="title_activity_search_places">SearchPlacesActivity</string>

    <string name="msg_devices_not_support">Your Device does not support Google Play Services.</string>
    <string name="msg_location_service_enable">You need to enable location service to get more accurate location.</string>
    <string name="lbl_give_location_permission">TMS requires access to your location, this allows you to find best route.</string>

    <string name="lbl_ok">OK</string>

    <string name="msg_on_internet">Please Check Internet Connection.</string>
    <string name="msg_start_route">Are you sure you want to start route ?</string>

    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="str_enter_a_password">Enter a password</string>
    <string name="str_enter_valid_email_id">Enter valid email-id</string>

    <string name="notification_hint">Enter task description</string>

    <string name="notification_msg">Please write task description first</string>
    <string name="timer_msg">Please select time first</string>
    <string name="map_key">AIzaSyBOxxOEDviMhpAeiP_CjmfHwYME1E9CMAA</string>
    <string name="lbl_select_time">Select Time :- Hours : Minutes</string>
    <string name="lbl_reminder">Reminder Set</string>

</resources>
