<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.LoginScreenActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_white"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_156sdp"
                android:layout_height="@dimen/_156sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_18sdp"
                android:contentDescription="@string/app_name"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_banner_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailIdEdtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordEdtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/str_login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/LoginCreateNewUserTxtView"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/str_create_new_user"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginForgotPasswordTxtView"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/str_forgot_password"
                    android:textAllCaps="false" />
            </LinearLayout>

         <!--   <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/light_gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_or" />

                <View
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/light_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/login_with_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewGuestUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:text="@string/string_guest_user"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
-->
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>